--- a/requirements.txt
+++ b/requirements.txt
@@ -52,6 +52,7 @@ importlib_metadata==8.7.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
 jiter==0.11.1
+joblib==1.5.2
 livekit==1.0.17
 livekit-agents==1.2.15
 livekit-api==1.0.7
@@ -65,6 +66,7 @@ mpmath==1.3.0
 msgpack==1.1.2
 multidict==6.7.0
 nest-asyncio==1.6.0
+networkx==3.5
 numpy==2.3.4
 onnxruntime==1.23.1
 openai==2.5.0
@@ -77,6 +79,7 @@ opentelemetry-proto==1.38.0
 opentelemetry-sdk==1.38.0
 opentelemetry-semantic-conventions==0.59b0
 packaging==25.0
+pillow==12.0.0
 prometheus_client==0.23.1
 propcache==0.4.1
 proto-plus==1.26.1
@@ -90,17 +93,23 @@ pydantic_core==2.41.4
 PyJWT==2.10.1
 pyreadline3==3.5.4
 python-dotenv==1.1.1
+python-multipart==0.0.20
 PyYAML==6.0.3
 regex==2025.9.18
 requests==2.32.5
 rsa==4.9.1
 safetensors==0.6.2
+scikit-learn==1.7.2
+scipy==1.16.2
+sentence-transformers==5.1.1
 sniffio==1.3.1
 sounddevice==0.5.2
 starlette==0.48.0
 sympy==1.14.0
 tenacity==9.1.2
+threadpoolctl==3.6.0
 tokenizers==0.22.1
+torch==2.9.0
 tqdm==4.67.1
 transformers==4.57.1
 types-protobuf==6.32.1.20250918
